--- a/.github/workflows/test-examples.yml
+++ b/.github/workflows/test-examples.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test And Run Examples
 on:
   push:
     branches:
@@ -15,5 +15,8 @@ jobs:
           go-version: 1.24
           cache-dependency-path: go.sum
 
-      - name: Run tests
-        run: go test ./...
+      - name: Test
+        run: make test
+
+      - name: Run Examples
+        run: make examples
