add test runner, configure project for dev

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 coverage.*
 *.coverprofile
 profile.cov
+!coverage.sh
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
@@ -32,5 +33,5 @@ go.work.sum
 .vscode/
 
 # Development Cache
-.out
+.cache
 lcov.info
