--- a/jf.toml
+++ b/jf.toml
@@ -2,8 +2,8 @@
 version = "0.1.0"
 
 [job.test]
-command = "go"
-args = ["test", "./..."]
+command = "make"
+args = ["test"]
 
 [job."test:live"]
 mode = "watch"
@@ -11,17 +11,8 @@ job = "test"
 watch_list = ["**/*.go"]
 
 [job.coverage]
-mode = "shell"
-script = """
-if [ ! -d .out ]; then
-    mkdir -p .out
-fi
-
-COVERAGE_PROFILE=.out/coverage.out
-LCOV_FILE=lcov.info
-go test -coverprofile=${COVERAGE_PROFILE} ./...
-go run github.com/jandelgado/gcov2lcov -infile=${COVERAGE_PROFILE} -outfile=${LCOV_FILE}
-"""
+command = "make"
+args = ["coverage"]
 
 [job."coverage:live"]
 mode = "watch"
